[gd_scene load_steps=11 format=3 uid="uid://bv044q7v1m3s6"]

[ext_resource type="TileSet" uid="uid://vy0a25yf1p1a" path="res://Tileset_mapa/interiorCasa.tres" id="1_0r4mw"]
[ext_resource type="Script" path="res://scripts_project/PB_casa.gd" id="1_s6q74"]
[ext_resource type="PackedScene" uid="uid://eotxv1k3f6rr" path="res://scenes/burguer_senital.tscn" id="2_v4bm7"]
[ext_resource type="PackedScene" uid="uid://4u1ew5kv70kx" path="res://scenes/canvas_modulate.tscn" id="4_hwkuc"]
[ext_resource type="Texture2D" uid="uid://cosqufjvk4up8" path="res://Sprites/dialog box big.png" id="5_wqt0s"]
[ext_resource type="FontFile" uid="uid://bpbxcqcebuhsp" path="res://fonts/dogicapixel.ttf" id="6_s3sc2"]
[ext_resource type="PackedScene" uid="uid://bnjdyitjrv1xt" path="res://scenes/pausa.tscn" id="7_82kjx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5dbok"]
size = Vector2(11, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lk1bi"]
size = Vector2(14, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjrpp"]
size = Vector2(31, 28)

[node name="PB_Casa" type="Node"]
script = ExtResource("1_s6q74")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_0r4mw")
format = 2
layer_0/name = "Pisobase"
layer_0/tile_data = PackedInt32Array(0, 65545, 6, 65536, 131074, 9, 131072, 131074, 9, 196608, 131074, 9, 262144, 131074, 9, 327680, 131074, 9, 393216, 131074, 9, 524288, 131074, 9, 589824, 131074, 9, 655360, 131074, 9, 720896, 131074, 9, 458752, 131074, 9, 720897, 131074, 9, 720898, 131074, 9, 720899, 131074, 9, 720900, 131074, 9, 720901, 131074, 9, 720902, 131074, 9, 720903, 131074, 9, 720904, 131074, 9, 720905, 131074, 9, 720906, 131074, 9, 720907, 131074, 9, 720908, 131074, 9, 720909, 131074, 9, 720910, 131074, 9, 720911, 131074, 9, 65537, 131074, 9, 131073, 131074, 9, 196609, 131074, 9, 262145, 131074, 9, 327681, 131074, 9, 393217, 131074, 9, 458753, 131074, 9, 524289, 131074, 9, 589825, 131074, 9, 655361, 131074, 9, 65538, 131074, 9, 131074, 131074, 9, 196610, 131074, 9, 262146, 131074, 9, 327682, 131074, 9, 393218, 131074, 9, 458754, 131074, 9, 524290, 131074, 9, 589826, 131074, 9, 655362, 131074, 9, 65539, 131074, 9, 131075, 131074, 9, 196611, 131074, 9, 262147, 131074, 9, 327683, 131074, 9, 393219, 131074, 9, 458755, 131074, 9, 524291, 131074, 9, 589827, 131074, 9, 655363, 131074, 9, 65540, 131074, 9, 131076, 131074, 9, 196612, 131074, 9, 262148, 131074, 9, 327684, 131074, 9, 393220, 131074, 9, 458756, 131074, 9, 524292, 131074, 9, 589828, 131074, 9, 655364, 131074, 9, 65541, 131074, 9, 131077, 131074, 9, 196613, 131074, 9, 262149, 131074, 9, 327685, 131074, 9, 393221, 131074, 9, 458757, 131074, 9, 524293, 131074, 9, 589829, 131074, 9, 655365, 131074, 9, 65542, 131074, 9, 131078, 131074, 9, 196614, 131074, 9, 262150, 131074, 9, 327686, 131074, 9, 393222, 131074, 9, 458758, 131074, 9, 524294, 131074, 9, 589830, 131074, 9, 655366, 131074, 9, 65543, 131074, 9, 131079, 131074, 9, 196615, 131074, 9, 262151, 131074, 9, 327687, 131074, 9, 393223, 131074, 9, 458759, 131074, 9, 524295, 131074, 9, 589831, 131074, 9, 655367, 131074, 9, 65544, 131074, 9, 131080, 131074, 9, 196616, 131074, 9, 262152, 131074, 9, 327688, 131074, 9, 393224, 131074, 9, 458760, 131074, 9, 524296, 131074, 9, 589832, 131074, 9, 655368, 131074, 9, 65545, 131074, 9, 131081, 131074, 9, 196617, 131074, 9, 262153, 131074, 9, 327689, 131074, 9, 393225, 131074, 9, 458761, 131074, 9, 524297, 131074, 9, 589833, 131074, 9, 655369, 131074, 9, 65546, 131074, 9, 131082, 131074, 9, 196618, 131074, 9, 262154, 131074, 9, 327690, 131074, 9, 393226, 131074, 9, 458762, 131074, 9, 524298, 131074, 9, 589834, 131074, 9, 655370, 131074, 9, 65547, 131074, 9, 131083, 131074, 9, 196619, 131074, 9, 327691, 131074, 9, 393227, 131074, 9, 458763, 131074, 9, 524299, 131074, 9, 589835, 131074, 9, 655371, 131074, 9, 65548, 131074, 9, 131084, 131074, 9, 196620, 131074, 9, 262156, 131074, 9, 327692, 131074, 9, 393228, 131074, 9, 458764, 131074, 9, 524300, 131074, 9, 589836, 131074, 9, 655372, 131074, 9, 65549, 131074, 9, 131085, 131074, 9, 196621, 131074, 9, 262157, 131074, 9, 327693, 131074, 9, 393229, 131074, 9, 458765, 131074, 9, 524301, 131074, 9, 589837, 131074, 9, 655373, 131074, 9, 65550, 131074, 9, 131086, 131074, 9, 196622, 131074, 9, 262158, 131074, 9, 327694, 131074, 9, 393230, 131074, 9, 458766, 131074, 9, 524302, 131074, 9, 589838, 131074, 9, 655374, 131074, 9, 524303, 131074, 9, 589839, 131074, 9, 655375, 131074, 9, 1, 65545, 6, 2, 65545, 6, 3, 65545, 6, 4, 65545, 6, 5, 65545, 6, 6, 65545, 6, 7, 65545, 6, 11, 65545, 6, 12, 65545, 6, 13, 65545, 6, 524304, 131074, 9, 589840, 131074, 9, 655376, 131074, 9, 720912, 131074, 9, 524305, 131074, 9, 589841, 131074, 9, 655377, 131074, 9, 720913, 131074, 9, 393231, 131074, 9, 458767, 131074, 9, 393232, 131074, 9, 458768, 131074, 9, 393233, 131074, 9, 458769, 131074, 9, -65536, 327689, 5, -65535, 327689, 5, -65534, 327689, 5, -65533, 327689, 5, -65532, 327689, 5, -65531, 327689, 5, -65530, 327689, 5, -65529, 327689, 5, -65528, 327689, 5, -65527, 327689, 5, -65525, 327689, 5, -65524, 327689, 5, -65523, 327689, 5, -65526, 327689, 5, 10, 65545, 6, 8, 65545, 6, 9, 65545, 6, 262155, 131074, 9, -65522, 327689, 5, -131058, 524297, 5, -131059, 524297, 5, -131060, 524297, 5, -131061, 524297, 5, -131062, 524297, 5, -131063, 524297, 5, -131064, 524297, 5, -131065, 524297, 5, -131066, 524297, 5, -131067, 524297, 5, -131068, 524297, 5, -131069, 524297, 5, -131070, 524297, 5, -131071, 524297, 5, -131072, 524297, 5, 65535, 327689, 0, -1, 327689, 0, 131071, 327689, 0, 196607, 327689, 0, 262143, 327689, 0, 327679, 327689, 0, 393215, 327689, 0, 458751, 327689, 0, 524287, 327689, 0, 589823, 327689, 0, 655359, 327689, 0, 720895, 327689, 0, 786431, 327689, 0, 786432, 786441, 3, 786433, 786441, 3, 786434, 786441, 3, 786435, 786441, 3, 786436, 786441, 3, 786437, 786441, 3, 786438, 786441, 3, 786439, 786441, 3, 786440, 786441, 3, 786441, 786441, 3, 786442, 786441, 3, 786443, 786441, 3, 786444, 786441, 3, 786445, 786441, 3, 786446, 786441, 3, 786447, 786441, 3, 786448, 786441, 3, 786449, 786441, 3, 720914, 393225, 0, 655378, 393225, 0, 589842, 393225, 0, 524306, 393225, 0, 458770, 393225, 0, 393234, 393225, 0, 327695, 131074, 9, 262159, 131074, 9, 196623, 131074, 9, 131087, 131074, 9, 65551, 131074, 9, -131057, 524297, 5, -131056, 524297, 5, 15, 524297, 6, 16, 524297, 6, -65521, 327689, 5, -65520, 327689, 5, -65519, 327689, 5, 17, 524297, 6, -131055, 524297, 5, 65552, 131074, 9, 65553, 131074, 9, 131089, 131074, 9, 196625, 131074, 9, 262161, 131074, 9, 327697, 131074, 9, 262160, 131074, 9, 196624, 131074, 9, 327696, 131074, 9, 131088, 131074, 9, 327698, 393225, 0, 262162, 393225, 0, 196626, 393225, 0, 131090, 393225, 0, 65554, 393225, 0, 18, 393225, 0, -65518, 393225, 0, -131054, 393225, 0, -65537, 327689, 0)
layer_1/name = "Muebles"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(589836, 393219, 22, 589841, 458755, 22, 458767, 262147, 22, 524305, 458755, 21, 524300, 393219, 21, 65541, 458755, 14, 65542, 524291, 14, 5, 458755, 13, 6, 524291, 13, 7, 524291, 13, 65543, 524291, 14, 8, 589827, 13, 65544, 589827, 14, 393231, 262147, 21, 65549, 589826, 7, 131085, 589826, 9, 65550, 655362, 7, 131086, 655362, 9, 65551, 720898, 7, 131087, 720898, 9, -65522, 524291, 8, 14, 524291, 9, 131089, 458753, 12, 458752, 983049, 2, 524288, 983049, 3, 458753, 983049, 2, 524289, 983049, 3, 458754, 983049, 2, 524290, 983049, 3, 458755, 983049, 2, 524291, 983049, 3, 458756, 983049, 2, 524292, 983049, 3, 458757, 983049, 2, 524293, 983049, 3, 458758, 983049, 2, 524294, 983049, 3, 458759, 983049, 2, 524295, 983049, 3, 458760, 983049, 2, 524296, 983049, 3, 589832, 983049, 3, 589831, 983049, 3, 589830, 983049, 3, 589829, 983049, 3, 589828, 983049, 3, 589827, 983049, 3, 589826, 983049, 3, 589825, 983049, 3, 589824, 983049, 3, 524297, 1048585, 3, 589833, 1048585, 3, 458761, 1048585, 2, 196613, 65541, 10, 262149, 65541, 11, 196614, 131077, 10, 262150, 131077, 11, 196615, 196613, 10, 262151, 196613, 11, 196616, 262149, 10, 262152, 262149, 11)
layer_2/name = "muebles_superp"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(589837, 65539, 11, 524302, 262147, 10, 589839, 262147, 11, 524304, 131075, 10, 524300, 3, 10, 589836, 3, 11, 655372, 3, 12, 524301, 65539, 10, 655373, 65539, 12, 589840, 131075, 11, 655376, 131075, 12, 524305, 196611, 10, 589841, 196611, 11, 655377, 196611, 12, 524303, 262147, 10, 589838, 262147, 11, 655374, 262147, 12, 655375, 262147, 12, -65534, 262147, 18, 2, 262147, 19, 65538, 262147, 20, -65533, 327683, 18, 3, 327683, 19, 65539, 327683, 20, -65532, 196611, 18, 4, 196611, 19, 65540, 196611, 20, -65530, 589826, 3, 6, 589826, 4, -65529, 655362, 3, 7, 655362, 4, 458752, 131077, 12, 524288, 131077, 13, 589824, 131077, 14, 458753, 196613, 12, 524289, 196613, 13, 589825, 196613, 14, 655360, 131077, 15, 655361, 196613, 15, 524290, 262149, 12, 589826, 262149, 13, 655362, 262149, 14, 524291, 327685, 12, 589827, 327685, 13, 655363, 327685, 14, 524292, 393221, 12, 589828, 393221, 13, 655364, 393221, 14, 524293, 458757, 12, 589829, 458757, 13, 655365, 458757, 14, 524294, 524293, 12, 589830, 524293, 13, 655366, 524293, 14, 524295, 589829, 12, 589831, 589829, 13, 655367, 589829, 14, 524296, 655365, 12, 589832, 655365, 13, 655368, 655365, 14)
layer_3/name = "decoracion"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array(589838, 720899, 13, 589840, 196615, 5, 524302, 720899, 14, 589837, 786435, 14, 524303, 131079, 4, 1, 5, 16, 65537, 5, 17)

[node name="burger_2d" parent="TileMap" instance=ExtResource("2_v4bm7")]
position = Vector2(231, -5)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(234, 23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(47, 15)
shape = SubResource("RectangleShape2D_5dbok")

[node name="CanvasModulate" parent="." instance=ExtResource("4_hwkuc")]
visible = false

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(234, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_lk1bi")

[node name="Area_Tele" type="Area2D" parent="."]
position = Vector2(108, 25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Tele"]
position = Vector2(3.5, -2)
shape = SubResource("RectangleShape2D_kjrpp")

[node name="teledialogo" type="Sprite2D" parent="."]
visible = false
position = Vector2(178, 21)
scale = Vector2(0.604167, 0.604167)
texture = ExtResource("5_wqt0s")

[node name="Label" type="Label" parent="teledialogo"]
offset_left = -76.1379
offset_top = -9.93103
offset_right = 316.862
offset_bottom = 16.069
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_s3sc2")
theme_override_font_sizes/font_size = 8
text = "Parece que no hay señal, 
todo esto es muy extraño"
metadata/_edit_use_anchors_ = true

[node name="pausemenu" parent="." instance=ExtResource("7_82kjx")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area_Tele" to="." method="_on_area_tele_body_entered"]
[connection signal="body_exited" from="Area_Tele" to="." method="_on_area_tele_body_exited"]
